<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/rl_container_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12sp">

            <RelativeLayout
                android:id="@+id/rl_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/style_circle_black"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/black"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_container_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12sp">

            <RelativeLayout
                android:id="@+id/rl_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/style_circle_blue"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/blue"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_container_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12sp">

            <RelativeLayout
                android:id="@+id/rl_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/style_circle_red"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/red"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_container_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12sp">

            <RelativeLayout
                android:id="@+id/rl_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/style_circle_green"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/green"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_container_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12sp">

            <RelativeLayout
                android:id="@+id/rl_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/style_circle_yellow"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/yellow"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

    </LinearLayout>

</layout>