<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/colorWhite">

            <LinearLayout
                android:id="@+id/rl_container_pencil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_pencil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_pencil"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pencil"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_eraser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_eraser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_eraser"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/eraser"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_line"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/line"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_line_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_line_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_line_arrow"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/arrow"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_rect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_rect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_rect"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rect"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_rect_filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_rect_filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_rect_filled"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/filled_rect"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_circle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_circle"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/circle"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_circle_filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_circle_filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_circle_filled"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/filled_circle"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container_zooming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rl_zooming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_hand"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hand"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>